fixed video position on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,6 +74,8 @@ a {
   justify-content: center;
   /* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); */
 }
+.video-wrapper {
+}
 .apod-image {
   max-width: 100%;
   /* height: 80vh; */
